# CV_task_2

./: CMakeLists.txt
CV_task_2/: CMakeLists.txt  CV_task_2.cpp  CV_task_2.h
